<resources>
    <string name="app_name">Login</string>
    <string name="label_signin">Sign In</string>
    <string name="label_hello">Hi there! Nice to see again.</string>
    <string name="label_username">Username</string>
    <string name="txt_username">Your Username</string>
    <string name="label_password">Password</string>
    <string name="txt_password">Your password</string>
    <string name="btn_signin">Sign In</string>
    <string name="lbl_fogot">Forgot Password?</string>
    <string name="label_signup">Sign Up</string>
</resources>